updated to use with grunt concat,min

--- a/theme/amelia/bootswatch.less
+++ b/theme/amelia/bootswatch.less
@@ -2,7 +2,7 @@
 // Bootswatch
 // -----------------------------------------------------
 
-
+@import 'variables.less';
 // TYPOGRAPHY
 // -----------------------------------------------------
 
