--- a/theme/cyborg/bootswatch.less
+++ b/theme/cyborg/bootswatch.less
@@ -2,6 +2,7 @@
 // Bootswatch
 // -----------------------------------------------------
 
+@import 'variables.less';
 
 // TYPOGRAPHY
 // -----------------------------------------------------
